- Added "Game" and "Emulator" categories in the .desktop file template used by
  the `--enable-desktop-files` configure switch. Should fix issues with desktop
  environments not showing the icons after a `make install`.

** C64 fixes
------------

- extended DQBB support, support 16-256k RAM, support C128 mode.
- added support for UC1/UC15/UC2 cartridges
- correctly assign rr revision when mounting crt file
- various WiC64 related fixes
- Make possible to enable the CP/M cartridge again

** C128 fixes
-------------

- added snapshot support for c128 cartridge system
- Fixed various Z80 timing issues
- Fix: Z80 can not see charrom in c128 mode, but it can in c64 mode (bug #1987)
- added WZ reg for improved bit 3 and 5 status register results. x128 Z80 now passes ZEXALL.
- RAMlink: also exposes open-circuit when internal function roms are off (bug #1963)
- VDC memory is now properly accessed when memory configs differ; vdcdump runs
  in 16KB mode. (bug #1981)

** VIC20 fixes
--------------

- tweak ram init pattern, this makes some known cases that rely on it work
  (AE, Jelly Monsters)
- make the 'exp' command work in the monitor
- added support for 'rabbit tape' cartridge
- added support for 'Super Expander' cartridge
- added support for 'Mikro Assembler' cartridge
- added missing 'bin save', 'crt save', 'flush image' for Final Expansion,
  Megacart, Ultimem, VIC Flash Plugin

- added VIC20 SDL keymaps for UK(symbolic and positional) and DE (positional).

** Plus4 fixes
--------------

- fixed crash when xplus4 runs for a while
- new TED sound logic, heavily inspired by SDL-YAPE
- enabled userport printer
- added support for the 'PETSCII SNES ADAPTER'
- allow 8 controller ports
- make expansion port system (and 'exp' command) work like in other emus, move
  sid-card and digiblaster to cartridges
- improve the case when the TED is reading from floating bus.
- remove support for 'Hannes 4MB' expansion, which was kindof broken, and no