@@ -67,6 +67,7 @@
 #include "blackbox4.h"
 #include "blackbox8.h"
 #include "blackbox9.h"
+#include "bmpdataturbo.h"
 #include "c64-generic.h"
 #include "c64tpi.h"
 #include "comal80.h"
@@ -253,6 +254,7 @@ static cartridge_info_t cartlist[] = {
     { CARTRIDGE_NAME_BLACKBOX4,           CARTRIDGE_BLACKBOX4,           CARTRIDGE_GROUP_UTIL },
     { CARTRIDGE_NAME_BLACKBOX8,           CARTRIDGE_BLACKBOX8,           CARTRIDGE_GROUP_UTIL },
     { CARTRIDGE_NAME_BLACKBOX9,           CARTRIDGE_BLACKBOX9,           CARTRIDGE_GROUP_UTIL },
+    { CARTRIDGE_NAME_BMPDATATURBO,        CARTRIDGE_BMPDATATURBO,        CARTRIDGE_GROUP_UTIL },
     { CARTRIDGE_NAME_CAPTURE,             CARTRIDGE_CAPTURE,             CARTRIDGE_GROUP_FREEZER },
     { CARTRIDGE_NAME_COMAL80,             CARTRIDGE_COMAL80,             CARTRIDGE_GROUP_UTIL },
     { CARTRIDGE_NAME_DELA_EP256,          CARTRIDGE_DELA_EP256,          CARTRIDGE_GROUP_UTIL },
@@ -432,6 +434,7 @@ static int set_cartridge_type(int val, void *param)
         case CARTRIDGE_BLACKBOX4:
         case CARTRIDGE_BLACKBOX8:
         case CARTRIDGE_BLACKBOX9:
+        case CARTRIDGE_BMPDATATURBO:
         case CARTRIDGE_CAPTURE:
         case CARTRIDGE_COMAL80:
         case CARTRIDGE_DELA_EP64:
@@ -787,6 +790,9 @@ static int crt_attach(const char *filename, uint8_t *rawcart)
                 break;
             case CARTRIDGE_BLACKBOX9:
                 rc = blackbox9_crt_attach(fd, rawcart);
+                break;
+            case CARTRIDGE_BMPDATATURBO:
+                rc = bmpdataturbo_crt_attach(fd, rawcart);
                 break;
             case CARTRIDGE_CAPTURE:
                 rc = capture_crt_attach(fd, rawcart);
