@@ -68,6 +68,7 @@
 #include "blackbox4.h"
 #include "blackbox8.h"
 #include "blackbox9.h"
+#include "bmpdataturbo.h"
 #include "c64acia.h"
 #include "c64-generic.h"
 #include "c64-midi.h"
@@ -249,6 +250,9 @@ static const cmdline_option_t cmdline_options[] =
     { "-cartbb9", CALL_FUNCTION, CMDLINE_ATTRIB_NEED_ARGS,
       cart_attach_cmdline, (void *)CARTRIDGE_BLACKBOX9, NULL, NULL,
       "<Name>", "Attach raw 32KiB " CARTRIDGE_NAME_BLACKBOX9 " cartridge image" },
+    { "-cartbdt", CALL_FUNCTION, CMDLINE_ATTRIB_NEED_ARGS,
+      cart_attach_cmdline, (void *)CARTRIDGE_BMPDATATURBO, NULL, NULL,
+      "<Name>", "Attach raw 16KiB " CARTRIDGE_NAME_BMPDATATURBO " cartridge image" },
     { "-cartbis", CALL_FUNCTION, CMDLINE_ATTRIB_NEED_ARGS,
       cart_attach_cmdline, (void *)CARTRIDGE_BISPLUS, NULL, NULL,
       "<Name>", "Attach raw 2/4/8KiB " CARTRIDGE_NAME_BISPLUS " cartridge image" },
@@ -933,6 +937,8 @@ int cart_bin_attach(int type, const char *filename, uint8_t *rawcart)
             return blackbox8_bin_attach(filename, rawcart);
         case CARTRIDGE_BLACKBOX9:
             return blackbox9_bin_attach(filename, rawcart);
+        case CARTRIDGE_BMPDATATURBO:
+            return bmpdataturbo_bin_attach(filename, rawcart);
         case CARTRIDGE_CAPTURE:
             return capture_bin_attach(filename, rawcart);
         case CARTRIDGE_COMAL80:
@@ -1161,6 +1167,9 @@ void cart_attach(int type, uint8_t *rawcart)
             break;
         case CARTRIDGE_BLACKBOX9:
             blackbox9_config_setup(rawcart);
+            break;
+        case CARTRIDGE_BMPDATATURBO:
+            bmpdataturbo_config_setup(rawcart);
             break;
         case CARTRIDGE_CAPTURE:
             capture_config_setup(rawcart);
@@ -1768,6 +1777,9 @@ void cart_detach(int type)
         case CARTRIDGE_BLACKBOX9:
             blackbox9_detach();
             break;
+        case CARTRIDGE_BMPDATATURBO:
+            bmpdataturbo_detach();
+            break;
         case CARTRIDGE_CAPTURE:
             capture_detach();
             break;
@@ -2069,6 +2081,9 @@ void cartridge_init_config(void)
                 break;
             case CARTRIDGE_BLACKBOX9:
                 blackbox9_config_init();
+                break;
+            case CARTRIDGE_BMPDATATURBO:
+                bmpdataturbo_config_init();
                 break;
             case CARTRIDGE_CAPTURE:
                 capture_config_init();
@@ -2378,6 +2393,9 @@ void cartridge_reset(void)
         case CARTRIDGE_ATOMIC_POWER:
             atomicpower_reset();
             break;
+        case CARTRIDGE_BMPDATATURBO:
+            bmpdataturbo_reset();
+            break;
         case CARTRIDGE_CAPTURE:
             capture_reset();
             break;
@@ -2439,10 +2457,10 @@ void cartridge_reset(void)
             se5_reset();
             break;
         case CARTRIDGE_WARPSPEED:
-            zippcode48_reset();
+            warpspeed_reset();
             break;
         case CARTRIDGE_ZIPPCODE48:
-            warpspeed_reset();
+            zippcode48_reset();
             break;
     }
     /* "Slot 1" */
@@ -3402,6 +3420,11 @@ int cartridge_snapshot_write_modules(struct snapshot_s *s)
                         return -1;
                     }
                     break;
+                case CARTRIDGE_BMPDATATURBO:
+                    if (bmpdataturbo_snapshot_write_module(s) < 0) {
+                        return -1;
+                    }
+                    break;
                 case CARTRIDGE_CAPTURE:
                     if (capture_snapshot_write_module(s) < 0) {
                         return -1;
@@ -4004,6 +4027,11 @@ int cartridge_snapshot_read_modules(struct snapshot_s *s)
                     break;
                 case CARTRIDGE_BLACKBOX8:
                     if (blackbox8_snapshot_read_module(s) < 0) {
+                        goto fail2;
+                    }
+                    break;
+                case CARTRIDGE_BMPDATATURBO:
+                    if (bmpdataturbo_snapshot_read_module(s) < 0) {
                         goto fail2;
                     }
                     break;
