@@ -150,6 +150,7 @@ const cart_t cart_info[] = {
     {0, 0, CARTRIDGE_SIZE_128KB |
            CARTRIDGE_SIZE_256KB |
            CARTRIDGE_SIZE_512KB,   0x4000, 0x8000,   0, 2, CARTRIDGE_NAME_UC2,                  "uc2", save_regular_crt},
+    {0, 0, CARTRIDGE_SIZE_16KB,    0x4000, 0x8000,   1, 0, CARTRIDGE_NAME_BMPDATATURBO,         "bdt", save_regular_crt},
     {0, 0, 0, 0, 0, 0, 0, NULL, NULL, NULL}
 };
 
